test/libyul/yulSyntaxTests/invalid/dup_disallowed.yul
{
    dup0()
    dup1()
    dup2()
    dup3()
    dup4()
    dup5()
    dup6()
    dup7()
    dup8()
    dup9()
    dup10()
    dup11()
    dup12()
    dup13()
    dup14()
    dup15()
    dup16()
    dup32()
}
// ----
// DeclarationError 4619: (6-10): Function "dup0" not found.
// DeclarationError 4619: (17-21): Function "dup1" not found.
// DeclarationError 4619: (28-32): Function "dup2" not found.
// DeclarationError 4619: (39-43): Function "dup3" not found.
// DeclarationError 4619: (50-54): Function "dup4" not found.
// DeclarationError 4619: (61-65): Function "dup5" not found.
// DeclarationError 4619: (72-76): Function "dup6" not found.
// DeclarationError 4619: (83-87): Function "dup7" not found.
// DeclarationError 4619: (94-98): Function "dup8" not found.
// DeclarationError 4619: (105-109): Function "dup9" not found.
// DeclarationError 4619: (116-121): Function "dup10" not found.
// DeclarationError 4619: (128-133): Function "dup11" not found.
// DeclarationError 4619: (140-145): Function "dup12" not found.
// DeclarationError 4619: (152-157): Function "dup13" not found.
// DeclarationError 4619: (164-169): Function "dup14" not found.
// DeclarationError 4619: (176-181): Function "dup15" not found.
// DeclarationError 4619: (188-193): Function "dup16" not found.
// DeclarationError 4619: (200-205): Function "dup32" not found.
